[package]
authors = ["The Rust Project Developers"]
name = "compiletest"
version = "0.0.0"
edition = "2018"

[dependencies]
diff = "0.1.11"
env_logger = { version = "0.5", default-features = false }
filetime = "0.2"
getopts = "0.2"
log = "0.4"
regex = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustfix = "0.4.4"
lazy_static = "1.2"
walkdir = "2.2.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
miow = "0.3"
winapi = { version = "0.3", features = ["winerror"] }
